# ignitecoin

./: .appveyor.yml  .cirrus.yml  .fuzzbuzz.yml  .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL  INSTALL.md  Makefile  Makefile.am  Makefile.in  README.md  REVIEWERS  SECURITY.md  aclocal.m4  autogen.sh  bitcoin-qt.pro  config.status  configure  configure.ac  libbitcoinconsensus.pc  libignitecoinconsensus.pc  libignitecoinconsensus.pc.in  libtool  rename_files
doc/man/: Makefile  Makefile.am  Makefile.in  bitcoin-cli.1  bitcoin-qt.1  bitcoin-tx.1  bitcoin-util.1  bitcoin-wallet.1  bitcoind.1  ignitecoin-cli.1  ignitecoin-qt.1  ignitecoin-tx.1  ignitecoin-wallet.1  ignitecoind.1  litecoin-cli.1  litecoin-qt.1  litecoin-tx.1  litecoin-wallet.1  litecoind.1
src/: Makefile  Makefile.am  Makefile.bench.include  Makefile.crc32c.include  Makefile.in  Makefile.leveldb.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  alert.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  attributes.h  banman.cpp  banman.h  base58.cpp  base58.h  bech32.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-util.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  bitcoinrpc.cpp  blockencodings.cpp  blockencodings.h  blockfilter.cpp  blockfilter.h  (+150 more)
src/.deps/: ignitecoin_cli-ignitecoin-cli.Po  ignitecoin_tx-ignitecoin-tx.Po  ignitecoin_util-ignitecoin-util.Po  ignitecoin_wallet-ignitecoin-wallet.Po  ignitecoind-bitcoind.Po  ignitecoind-ignitecoind.Po  libbitcoin_server_a-dummywallet.Po  libbitcoin_server_a-net.Po  libbitcoin_server_a-pow.Po  libignitecoin_common_a-base58.Po  libignitecoin_common_a-bech32.Po  libignitecoin_common_a-bloom.Po  libignitecoin_common_a-chainparams.Po  libignitecoin_common_a-coins.Po  libignitecoin_common_a-compressor.Po  libignitecoin_common_a-core_read.Po  libignitecoin_common_a-core_write.Po  libignitecoin_common_a-key.Po  libignitecoin_common_a-key_io.Po  libignitecoin_common_a-keystore.Po  libignitecoin_common_a-merkleblock.Po  libignitecoin_common_a-net_permissions.Po  libignitecoin_common_a-netaddress.Po  libignitecoin_common_a-netbase.Po  libignitecoin_common_a-outputtype.Po  libignitecoin_common_a-protocol.Po  libignitecoin_common_a-psbt.Po  libignitecoin_common_a-scheduler.Po  libignitecoin_common_a-versionbitsinfo.Po  libignitecoin_common_a-warnings.Po  libignitecoin_consensus_a-arith_uint256.Po  libignitecoin_consensus_a-hash.Po  libignitecoin_consensus_a-pubkey.Po  libignitecoin_consensus_a-uint256.Po  libignitecoin_server_a-addrdb.Po  libignitecoin_server_a-addrman.Po  libignitecoin_server_a-banman.Po  libignitecoin_server_a-blockencodings.Po  libignitecoin_server_a-blockfilter.Po  libignitecoin_server_a-bloom.Po  (+44 more)
src/bench/: .gitignore  addrman.cpp  base58.cpp  bech32.cpp  bench.cpp  bench.h  bench_bitcoin.cpp  bench_ignitecoin.cpp  block_assemble.cpp  ccoins_caching.cpp  chacha20.cpp  chacha_poly_aead.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  data.cpp  data.h  duplicate_inputs.cpp  examples.cpp  gcs_filter.cpp  hashpadding.cpp  lockedpool.cpp  mempool_eviction.cpp  mempool_stress.cpp  merkle_root.cpp  nanobench.cpp  poly1305.cpp  prevector.cpp  rollingbloom.cpp  rpc_blockchain.cpp  rpc_mempool.cpp  util_time.cpp  verify_script.cpp  wallet_balance.cpp
src/compat/: assumptions.h  byteswap.h  cpuid.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  stdin.cpp  stdin.h  strnlen.cpp
src/config/: bitcoin-config.h  ignitecoin-config.h  ignitecoin-config.h.in  stamp-h1
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  tx_check.cpp  tx_check.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: aes.cpp  aes.h  chacha20.cpp  chacha20.h  chacha_poly_aead.cpp  chacha_poly_aead.h  common.h  hkdf_sha256_32.cpp  hkdf_sha256_32.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  muhash.cpp  muhash.h  poly1305.cpp  poly1305.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha256_avx2.cpp  sha256_shani.cpp  sha256_sse4.cpp  sha256_sse41.cpp  sha3.cpp  sha3.h  sha512.cpp  sha512.h  siphash.cpp  siphash.h
src/index/: base.cpp  base.h  blockfilterindex.cpp  blockfilterindex.h  disktxpos.h  txindex.cpp  txindex.h
src/interfaces/: README.md  chain.cpp  chain.h  handler.cpp  handler.h  node.cpp  node.h  wallet.cpp  wallet.h
src/logging/: timer.h
src/node/: README.md  coin.cpp  coin.h  coinstats.cpp  coinstats.h  context.cpp  context.h  interfaces.cpp  psbt.cpp  psbt.h  transaction.cpp  transaction.h  ui_interface.cpp  ui_interface.h  utxo_snapshot.h
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h  settings.cpp  settings.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: README.md  aboutdialog.cpp  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoin.cpp  bitcoin.h  bitcoin.qrc  bitcoin_locale.qrc  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  createwalletdialog.cpp  createwalletdialog.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  ignitecoin.cpp  ignitecoin.h  ignitecoin.qrc  ignitecoinaddressvalidator.h  (+93 more)
src/rpc/: blockchain.cpp  blockchain.h  client.cpp  client.h  mining.cpp  mining.h  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  rawtransaction.h  rawtransaction_util.cpp  rawtransaction_util.h  register.h  request.cpp  request.h  server.cpp  server.h  util.cpp  util.h
src/script/: bitcoinconsensus.h  descriptor.cpp  (+20 more)
(+1882 files in other folders)
