dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=ignitecoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=ignitecoin-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=ignitecoin-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=ignitecoin-tx.1
endif

if BUILD_BITCOIN_UTIL
  dist_man1_MANS+=ignitecoin-util.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=ignitecoin-wallet.1
endif
endif
